fixed input autocomplete color contrast

--- a/components/Subscribe/subscribe.module.scss
+++ b/components/Subscribe/subscribe.module.scss
@@ -39,6 +39,19 @@
     padding: 0.75rem 0.5rem 0.75rem 0.5rem;
   }
 
+  /* Change Autocomplete styles in Chrome*/
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus,
+  textarea:-webkit-autofill,
+  textarea:-webkit-autofill:hover,
+  textarea:-webkit-autofill:focus,
+  select:-webkit-autofill,
+  select:-webkit-autofill:hover,
+  select:-webkit-autofill:focus {
+    color: var(--black);
+  }
+
   .emailLabel {
     width: 100%;
   }
